12/11/23:
-Runtime fixes

11/11/23:
-Added runtime exe
-Physics system now updates before scripts

10/11/23:
-Debug menu improvements with ImPlot
-Made debug menu available in core engine

9/11/23:
-Transparent material support, still need to support opacity maps
-Core assets no longer shown in editor
-Fixed material deletion

7/11/23:
-Shader hot reloading

6/11/23:
-Converted engine shaders to use the include system, smaller size and more readable
-Slightly better error messages for shaders

3/11/23:
-C++ style include system for shaders

2/11/23:
-Made a proper GameLayer and exe (currently editor with fractal renderpass) for the fractal game and moved the code out of the base editor
-"Renderpass intercept" system where additional rendering code can be executed between different stages of the core RenderScene pipeline, required if multiple layers need to render parts of the scene

21/10/23:
-Scripts debuggable in debug mode
-Script recompilation no longer unnecessarily happens on editor restart
-Old script PDB files cleaned up properly
-Moved all base assets into AssetManager
-Fixed bug where textures would not bind properly after scene reload
-Fixed input state bug caused by not disregarding GLFW_REPEAT events
-Fixed audio not playing

20/10/23:
-Overhauled input system, better state tracking
-Improved entity node UI selecting controls
-UI improvements, more stable scene display panel
-Audio components pre-allocated on correct side of boundary

15/10/23:
-Fog improvements
-GetComponent added to scripts
-Audio component improvements (editor ui and functionality)
-Bugfixes

12/10/23:
-More bugfixes to transforms and gizmos
-Material naming conflict during serialization fixed
-Rotation error in transform hierarchies fixed, unoptimized

10/10/23:
-More audio component settings
-Fixed another audio asset serialization bug
-Audio component serialization
-Few other small bugfixes

9/10/23:
-Lowered terrain memory cost significantly and improved shading