@@ -198,7 +198,6 @@ namespace ORNG {
 		std::unordered_map<const physx::PxActor*, SceneEntity*> m_entity_lookup;
 		// Queue of entities that need OnCollision script events (if they have one) to fire, has to be done outside of simulation due to restrictions with rigidbody modification during simulation, processed each frame in OnUpdate
 		std::vector<std::pair<SceneEntity*, SceneEntity*>> m_entity_collision_queue;
-		std::vector<SceneEntity*> m_trigger_collision_queue;
 
 
 
@@ -220,7 +219,7 @@ namespace ORNG {
 			virtual void onContact(const PxContactPairHeader& pairHeader, const PxContactPair* pairs, PxU32 nbPairs) override;
 
 			virtual void onTrigger(PxTriggerPair* pairs, PxU32 count) override {
-				for (int i = 0; i < count; i++) {
+				/*for (int i = 0; i < count; i++) {
 					// ignore pairs when shapes have been deleted
 					if (pairs[i].flags & (PxTriggerPairFlag::eREMOVED_SHAPE_TRIGGER | PxTriggerPairFlag::eREMOVED_SHAPE_OTHER))
 						continue;
@@ -229,7 +228,7 @@ namespace ORNG {
 						if (auto* p_script = p_ent->GetComponent<ScriptComponent>())
 							mp_system->m_trigger_collision_queue
 					}
-				}
+				}*/
 			};
 
 			virtual void onAdvance(const PxRigidBody* const* bodyBuffer, const PxTransform* poseBuffer, const PxU32 count) override {};
